fix: page overflow, class

--- a/src/app/modules/programa-formacion/pages/curso/curso.component.scss
+++ b/src/app/modules/programa-formacion/pages/curso/curso.component.scss
@@ -1,12 +1,7 @@
 indev-header {
   color: white !important;
 }
-section {
-  width: 100%;
-}
-
 .container {
-  width: 100%;
   display: grid;
   grid-gap: 20px 40px;
 
